--- a/login.html
+++ b/login.html
@@ -10,7 +10,9 @@
 <body>
     <div class="container">
         <form class="form-signin" action="classes/login.php" method="post">
-            <h2 class="form-signin-heading">Please sign in</h2>
+            <div style="text-align:center;">
+                 <h2 class="form-signin-heading">管理者登入系統</h2>
+            </div>
             <label for="inputEmail" class="sr-only">管理員帳號</label>
             <br>
             <input type="text" name="name" id="username" class="form-control" placeholder="UserName" value="" required autofocus>
